k8s_manifests/mysqlexporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlexporter
  name: mysqlexporter
spec:
  # type: LoadBalancer
  ports:
    - name: "9104"
      port: 9104
      targetPort: 9104
  selector:
    io.kompose.service: mysqlexporter
